// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`access_tokens table schema 1`] = `
Object {
  "access_token": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "editor_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "editor_url": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('access_tokens_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`api_logs table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "editor_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('api_logs_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "request_method": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "request_params": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "jsonb",
  },
  "request_url": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "response": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "jsonb",
  },
  "token": Object {
    "defaultValue": null,
    "maxLength": 1200,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`city table schema 1`] = `
Object {
  "code_postal": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('city_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "ville": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`commentaires table schema 1`] = `
Object {
  "antenne_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "comment": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "text",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('commentaires_co_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "ti_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`departements table schema 1`] = `
Object {
  "code": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('departements_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "id_region": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`direction table schema 1`] = `
Object {
  "department_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('direction_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "region_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`editor_token_requests table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "email": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('editor_token_requests_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "name": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`editors table schema 1`] = `
Object {
  "api_token": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('editors_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "name": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`enquete_reponses table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "enquete_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "enquete_reponses_activite_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "enquete_reponses_agrements_formations_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "enquete_reponses_informations_mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "enquete_reponses_populations_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "enquete_reponses_prestations_sociale_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('enquete_reponses_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "submitted_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
}
`;

exports[`enquete_reponses_activite table schema 1`] = `
Object {
  "accompagnement_judiciaire_domicile_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "accompagnement_judiciaire_domicile_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "accompagnement_judiciaire_etablissement_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "accompagnement_judiciaire_etablissement_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "curatelle_biens_domicile_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_biens_domicile_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_biens_etablissement_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_biens_etablissement_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_personne_domicile_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_personne_domicile_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_personne_etablissement_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_personne_etablissement_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_renforcee_domicile_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_renforcee_domicile_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_renforcee_etablissement_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_renforcee_etablissement_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_simple_domicile_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_simple_domicile_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_simple_etablissement_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_simple_etablissement_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('enquete_reponses_activite_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "last_update": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "revisions_autre": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "revisions_changement": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "revisions_main_levee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "revisions_masp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "revisions_reconduction": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sorties_deces": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sorties_main_levee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sorties_masp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_domicile_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_domicile_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_etablissement_debut_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_etablissement_fin_annee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`enquete_reponses_agrements_formations table schema 1`] = `
Object {
  "annee_agrement": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "annee_debut_activite": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cnc_annee_obtention": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cnc_heures_formation": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "cumul_delegue_service": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "cumul_delegue_service_etp": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "cumul_prepose": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "cumul_prepose_etp": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "debut_activite_avant_2009": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "id": Object {
    "defaultValue": "nextval('enquete_reponses_agrements_formations_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "last_update": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "nb_departements": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "nb_mesures_dep_autres": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nb_mesures_dep_finance": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "niveau_qualification": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "secretaire_specialise": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "secretaire_specialise_etp_n1": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "secretaire_specialise_etp_n2": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "secretaire_specialise_etp_n3": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "secretaire_specialise_etp_n4": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "secretaire_specialise_etp_n5": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "secretaire_specialise_etp_n6": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
}
`;

exports[`enquete_reponses_informations_mandataire table schema 1`] = `
Object {
  "anciennete": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "benevole": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "departement": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "estimation_etp": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "exerce_secretaires_specialises": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "exerce_seul_activite": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "forme_juridique": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('enquete_reponses_informations_mandataire_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "last_update": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "local_professionnel": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "region": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "secretaire_specialise_etp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "sexe": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "tranche_age": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`enquete_reponses_populations table schema 1`] = `
Object {
  "autre_mesures_age_25_39_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_25_39_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_40_59_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_40_59_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_60_74_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_60_74_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_inf_25_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_inf_25_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_sup_75_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_age_sup_75_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_anciennete_1_3_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_anciennete_3_5_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_anciennete_5_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_anciennete_inf_1_an": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_anciennete_sup_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_autre_etablissement_personne_agee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_autre_service": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_chrs": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_ehpad": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_etablissement_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_service_hospitalier_soins_longue_duree": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_service_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "autre_mesures_service_psychiatrique": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "curatelle_age_25_39_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_25_39_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_40_59_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_40_59_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_60_74_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_60_74_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_inf_25_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_inf_25_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_sup_75_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_age_sup_75_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_anciennete_1_3_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_anciennete_3_5_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_anciennete_5_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_anciennete_inf_1_an": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_anciennete_sup_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_autre_etablissement_personne_agee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_autre_service": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_chrs": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_ehpad": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_etablissement_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_service_hospitalier_soins_longue_duree": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_service_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "curatelle_service_psychiatrique": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('enquete_reponses_populations_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "last_update": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "maj_age_25_39_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_25_39_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_40_59_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_40_59_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_60_74_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_60_74_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_inf_25_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_inf_25_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_sup_75_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_age_sup_75_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_anciennete_1_3_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_anciennete_3_5_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_anciennete_5_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_anciennete_inf_1_an": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_anciennete_sup_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_autre_etablissement_personne_agee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_autre_service": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_chrs": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_ehpad": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_etablissement_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_service_hospitalier_soins_longue_duree": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_service_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "maj_service_psychiatrique": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_25_39_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_25_39_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_40_59_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_40_59_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_60_74_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_60_74_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_inf_25_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_inf_25_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_sup_75_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_age_sup_75_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_anciennete_1_3_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_anciennete_3_5_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_anciennete_5_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_anciennete_inf_1_an": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_anciennete_sup_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_autre_etablissement_personne_agee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_autre_service": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_chrs": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_ehpad": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_etablissement_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_service_hospitalier_soins_longue_duree": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_service_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "sauvegarde_justice_service_psychiatrique": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_25_39_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_25_39_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_40_59_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_40_59_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_60_74_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_60_74_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_inf_25_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_inf_25_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_sup_75_ans_femme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_age_sup_75_ans_homme": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_anciennete_1_3_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_anciennete_3_5_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_anciennete_5_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_anciennete_inf_1_an": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_anciennete_sup_10_ans": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_autre_etablissement_personne_agee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_autre_service": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_chrs": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_ehpad": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_etablissement_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_service_hospitalier_soins_longue_duree": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_service_personne_handicapee": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "tutelle_service_psychiatrique": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`enquete_reponses_prestations_sociales table schema 1`] = `
Object {
  "aah": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "als_apl": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "apa": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "asi": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "aspa": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('enquete_reponses_prestations_sociales_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "last_update": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "pch": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "rsa": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`enquete_services table schema 1`] = `
Object {
  "id": Object {
    "defaultValue": "nextval('enquete_services_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "nombre_delegues": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc_dpf": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc_maj": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc_pjm": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_en_formation": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_non_formes": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_poste_autre_personnel_etp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "nombre_postes_delegues_etp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`enquetes table schema 1`] = `
Object {
  "annee": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "date_fin": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('enquetes_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "status": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`etablissements table schema 1`] = `
Object {
  "adresse": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "code_postal": Object {
    "defaultValue": null,
    "maxLength": 10,
    "nullable": true,
    "type": "character varying",
  },
  "fax": Object {
    "defaultValue": null,
    "maxLength": 15,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('etablissements_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "id_finess": Object {
    "defaultValue": null,
    "maxLength": 20,
    "nullable": true,
    "type": "character varying",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 100,
    "nullable": false,
    "type": "character varying",
  },
  "tel": Object {
    "defaultValue": null,
    "maxLength": 15,
    "nullable": true,
    "type": "character varying",
  },
  "ville": Object {
    "defaultValue": null,
    "maxLength": 100,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`geolocalisation_code_postal table schema 1`] = `
Object {
  "cities": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "code_postal": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('\\"codePostalLatLngs_id_seq\\"'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "insee": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
}
`;

exports[`individuel_agrement_departements table schema 1`] = `
Object {
  "agrement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "departement_financeur": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "departement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('individuel_agrement_departements_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`individuel_agrements table schema 1`] = `
Object {
  "annee_agrement": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "annee_debut_activite": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "debut_activite_avant_2009": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "id": Object {
    "defaultValue": "nextval('individuel_agrements_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`individuel_exercices table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "cumul_delegue_service": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "cumul_delegue_service_etp": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "cumul_prepose": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "cumul_prepose_etp": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "estimation_etp": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('individuel_exercices_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "secretariat_specialise": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "secretariat_specialise_etp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
}
`;

exports[`individuel_formations table schema 1`] = `
Object {
  "cnc_dpf_annee_obtention": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cnc_dpf_heure_formation": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cnc_maj_annee_obtention": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cnc_maj_heure_formation": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cnc_mjpm_annee_obtention": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cnc_mjpm_heure_formation": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('individuel_formations_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "niveau_qualification": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "niveau_qualification_secretaire_spe": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`knex_migrations_v2 table schema 1`] = `
Object {
  "batch": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('knex_migrations_v2_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "migration_time": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "name": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`knex_migrations_v2_lock table schema 1`] = `
Object {
  "index": Object {
    "defaultValue": "nextval('knex_migrations_v2_lock_index_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "is_locked": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`lb_departements table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "departement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('lb_departements_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "individuel": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "lb_user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "prepose": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "service": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "ti": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
}
`;

exports[`lb_structures table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('lb_structures_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "lb_departement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "type": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`lb_tribunaux table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('lb_tribunaux_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "lb_departement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "ville": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`lb_users table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "email": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('lb_users_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "prenom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`logs_data table schema 1`] = `
Object {
  "action": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('logs_data_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "result": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`magistrat table schema 1`] = `
Object {
  "id": Object {
    "defaultValue": "nextval('magistrat_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "ti_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`mandataire_etablissements table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": false,
    "type": "timestamp with time zone",
  },
  "etablissement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "id": Object {
    "defaultValue": "nextval('\\"mandatairesEtablissements_id_seq\\"'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`mandataires table schema 1`] = `
Object {
  "adresse": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "code_postal": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "competences": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "text",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "date_mesure_update": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "department_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "dispo_max": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "email_send": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "etablissement": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "genre": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('mandataires_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "mesures_en_attente": Object {
    "defaultValue": "0",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mesures_en_cours": Object {
    "defaultValue": "0",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "siret": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "telephone": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "telephone_portable": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "ville": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`mesures table schema 1`] = `
Object {
  "annee": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "antenne_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "cabinet": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "civilite": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "code_postal": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "date_ouverture": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "date",
  },
  "department_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "etablissement": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "etablissement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "extinction": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "date",
  },
  "id": Object {
    "defaultValue": "nextval('mesures_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "is_urgent": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "judgment_date": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "date",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "numero_dossier": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "numero_rg": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "pays": Object {
    "defaultValue": "'FR'::character varying",
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "reason_extinction": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "residence": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "status": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "ti_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "type": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "ville": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`regions table schema 1`] = `
Object {
  "id": Object {
    "defaultValue": "nextval('regions_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`role table schema 1`] = `
Object {
  "id": Object {
    "defaultValue": "nextval('role_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "name": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`satisfaction_campaign_answers table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('satisfaction_campaign_answers_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "satisfaction_campaign_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "value": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`satisfaction_campaigns table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "ended_at": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('satisfaction_campaigns_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "name": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "started_at": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "timestamp with time zone",
  },
}
`;

exports[`service_antenne table schema 1`] = `
Object {
  "address": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "address_city": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "address_street": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "address_zip_code": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "bak_mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "contact_email": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "contact_firstname": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "contact_lastname": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "contact_phone": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": false,
    "type": "timestamp with time zone",
  },
  "date_mesure_update": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('service_antenne_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "mesures_awaiting": Object {
    "defaultValue": "0",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mesures_in_progress": Object {
    "defaultValue": "0",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "mesures_max": Object {
    "defaultValue": "0",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "name": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`service_member_invitations table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "email": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('service_member_invitations_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "sent_at": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "token": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`service_members table schema 1`] = `
Object {
  "id": Object {
    "defaultValue": "nextval('service_admin_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "is_admin": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": false,
    "type": "boolean",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`service_personnels table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('service_personnels_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "nombre_delegues": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc_dpf": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc_maj": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_cnc_pjm": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_en_formation": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_delegues_non_formes": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nombre_poste_autre_personnel_etp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "nombre_postes_delegues_etp": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
}
`;

exports[`service_tis table schema 1`] = `
Object {
  "id": Object {
    "defaultValue": "nextval('service_tis_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "ti_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`services table schema 1`] = `
Object {
  "adresse": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "code_postal": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "competences": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "department_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "dispo_max": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "email": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "etablissement": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('services_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "mesures_awaiting": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "mesures_in_progress": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "prenom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "siret": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "telephone": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "ville": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`should list all tables 1`] = `
Array [
  "access_tokens",
  "api_logs",
  "city",
  "commentaires",
  "departements",
  "direction",
  "editor_token_requests",
  "editors",
  "enquete_reponses",
  "enquete_reponses_activite",
  "enquete_reponses_agrements_formations",
  "enquete_reponses_informations_mandataire",
  "enquete_reponses_populations",
  "enquete_reponses_prestations_sociales",
  "enquete_services",
  "enquetes",
  "etablissements",
  "geolocalisation_code_postal",
  "individuel_agrement_departements",
  "individuel_agrements",
  "individuel_exercices",
  "individuel_formations",
  "knex_migrations_v2",
  "knex_migrations_v2_lock",
  "lb_departements",
  "lb_structures",
  "lb_tribunaux",
  "lb_users",
  "logs_data",
  "magistrat",
  "mandataire_etablissements",
  "mandataires",
  "mesures",
  "regions",
  "role",
  "satisfaction_campaign_answers",
  "satisfaction_campaigns",
  "service_antenne",
  "service_member_invitations",
  "service_members",
  "service_personnels",
  "service_tis",
  "services",
  "tis",
  "user_role",
  "user_tis",
  "users",
  "view_department_availability",
  "view_indicateur_inscrit",
  "view_indicateur_login",
  "view_indicateur_satisfaction_campaign",
  "view_mesure_gestionnaire",
  "view_mesure_gestionnaire_tis",
]
`;

exports[`tis table schema 1`] = `
Object {
  "address": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "address2": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "code_postal": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": false,
    "type": "timestamp with time zone",
  },
  "date_fermeture": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "date",
  },
  "date_modification": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "date",
  },
  "date_ouverture": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "date",
  },
  "departement_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "email": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "etablissement": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('tis_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "immutable": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": false,
    "type": "boolean",
  },
  "latitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "longitude": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "real",
  },
  "siret": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "telephone": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "type": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "updated_at": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "ville": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`user_role table schema 1`] = `
Object {
  "id": Object {
    "defaultValue": "nextval('user_role_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "role_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`user_tis table schema 1`] = `
Object {
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "id": Object {
    "defaultValue": "nextval('users_tis_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "ti_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "user_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`users table schema 1`] = `
Object {
  "active": Object {
    "defaultValue": "false",
    "maxLength": null,
    "nullable": true,
    "type": "boolean",
  },
  "cabinet": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "created_at": Object {
    "defaultValue": "CURRENT_TIMESTAMP",
    "maxLength": null,
    "nullable": false,
    "type": "timestamp with time zone",
  },
  "email": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "id": Object {
    "defaultValue": "nextval('users_id_seq'::regclass)",
    "maxLength": null,
    "nullable": false,
    "type": "integer",
  },
  "last_login": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "password": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
  "prenom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "reset_password_expires": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "timestamp with time zone",
  },
  "reset_password_token": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "type": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "username": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": false,
    "type": "character varying",
  },
}
`;

exports[`view_department_availability table schema 1`] = `
Object {
  "department_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "mesures_awaiting": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "bigint",
  },
  "mesures_in_progress": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "bigint",
  },
  "mesures_max": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "bigint",
  },
}
`;

exports[`view_indicateur_inscrit table schema 1`] = `
Object {
  "code": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "count": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "bigint",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "type": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`view_indicateur_login table schema 1`] = `
Object {
  "code": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "count": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "bigint",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "type": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
}
`;

exports[`view_indicateur_satisfaction_campaign table schema 1`] = `
Object {
  "code": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "type": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "value": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "numeric",
  },
}
`;

exports[`view_mesure_gestionnaire table schema 1`] = `
Object {
  "dep_nom": Object {
    "defaultValue": null,
    "maxLength": 255,
    "nullable": true,
    "type": "character varying",
  },
  "department_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "discriminator": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "text",
  },
  "id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "text",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "mesures_awaiting": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "mesures_in_progress": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "mesures_max": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "nom": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "character varying",
  },
  "remaining_capacity": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;

exports[`view_mesure_gestionnaire_tis table schema 1`] = `
Object {
  "discriminator": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "text",
  },
  "id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "text",
  },
  "mandataire_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "service_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
  "ti_id": Object {
    "defaultValue": null,
    "maxLength": null,
    "nullable": true,
    "type": "integer",
  },
}
`;
